# Haven

./: .gitignore  DEMO_RUNBOOK.md  HACKATHON-PITCH.md  README.md  TROUBLESHOOTING.md  extract_bedrooms.py  fastapi-test.err  fastapi-test.out  package-lock.json  package.json  requirements-datasets.txt
backend/: .env.example  README.md  pyproject.toml  requirements-data.txt  requirements.txt  run.py
backend/app/: auth_service.py  feedback_broadcast.py  integrations_service.py  integrations_settings_store.py  main.py  persistence.py  preferences_service.py  preferences_store.py  room_context.py  supabase_store.py  telegram_bot.py
backend/configs/: actions.demo-local.yaml  actions.kasa.yaml  actions.live-devices.yaml  actions.yaml  base_image_sources.yaml  bootstrap_demo.yaml  bootstrap_still.yaml  default.yaml  demo_replay.json  inference.yaml  train.yaml  train_multi_room.yaml  train_multi_room_v2.yaml  train_multi_room_v3.yaml  train_my_room.yaml  train_personal.yaml
backend/roomos/: __init__.py  config.py
backend/scripts/: _bootstrap.py  apply_supabase_migrations.py  audit_dataset.py  bootstrap_demo_model.py  capture_demo_fixture.py  capture_stills.py  capture_video.py  clean_dataset.py  clean_dataset_cv.py  clean_sleep_bed.py  clear_feedback_memory.py  data_collect.py  demo_action_receiver.py  demo_preflight.py  evaluate_model.py  expand_base_images.py  extract_features.py  generate_eval_report.py  import_base_images.py  import_sleep_bed.py  import_sleep_pexels.py  import_sleep_web.py  ingest_external_datasets.py  ingest_mpii_fiftyone.py  kasa_probe.py  (+18 more)
(+408 files in other folders)
